--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
     <button id="toggleSound">🔇 Sound</button>
   </div>
 <script id="frag" type="x-shader/x-fragment">
+- precision highp float;
++ #ifdef GL_FRAGMENT_PRECISION_HIGH
++ precision highp float;
++ #else
++ precision mediump float;
++ #endif
+     
 precision highp float;
 uniform vec2  u_res;
 uniform float u_time;
