--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
 <meta charset="utf-8">
 <title>Aurora Wonder Fractal</title>
 <style>
-  html,body{margin:0;height:100%;overflow:hidden;background:#000;color:#fff;font:14px/1 sans-serif}
-  #ui{position:fixed;top:10px;left:10px;z-index:10;background:#0008;padding:6px 10px;border-radius:6px}
-  label{margin-right:8px;white-space:nowrap}
-  select,input[type=range]{vertical-align:middle}
+  html, body { margin: 0; height: 100%; overflow: hidden; background: #000; color: #fff; font: 14px/1 sans-serif; }
+  #ui { position: fixed; top: 10px; left: 10px; z-index: 10; background: #0008; padding: 6px 10px; border-radius: 6px; }
+  label { margin-right: 8px; white-space: nowrap; }
+  select, input[type=range] { vertical-align: middle; }
+  #error { position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); color: red; font-size: 16px; text-align: center; display: none; }
 </style>
 </head>
 <body>
   <canvas id="gl"></canvas>
+  <div id="error">WebGL is not supported in your browser. Please use a modern browser like Chrome, Firefox, or Edge.</div>
 
   <div id="ui">
     <label>Constant
@@ -43,38 +45,38 @@ uniform float u_depth;   // iterations
 uniform float u_tunnel;  // tunnel strength
 
 // hue helper (HSL → RGB)
-vec3 hsl2rgb(float h,float s,float l){
-  float a=s*min(l,1.-l);
-  float f(float n){
-    float k=mod(n+h*6.,6.);
-    return l-a*max(min(min(k,4.-k),1.),0.);
-  }
-  return vec3(f(0.),f(1./3.),f(2./3.));
+vec3 hsl2rgb(float h, float s, float l) {
+  float a = s * min(l, 1.0 - l);
+  float f = (float n) => {
+    float k = mod(n + h * 6.0, 6.0);
+    return l - a * max(min(min(k, 4.0 - k), 1.0), 0.0);
+  };
+  return vec3(f(0.0), f(1.0 / 3.0), f(2.0 / 3.0));
 }
 
-void main(){
-  /* 1. normalised coords */
-  vec2 uv=(gl_FragCoord.xy-0.5*u_res)/min(u_res.x,u_res.y);
+void main() {
+  /* 1. normalized coords */
+  vec2 uv = (gl_FragCoord.xy - 0.5 * u_res) / min(u_res.x, u_res.y);
 
   /* 2. tunnel warp */
-  float r  = length(uv);
-  float ang= atan(uv.y,uv.x) + u_time*0.2;
-  r        = pow(r,1.0-u_tunnel);      // depth slider
-  vec2 z   = vec2(r*cos(ang), r*sin(ang));
+  float r = length(uv);
+  float ang = atan(uv.y, uv.x) + u_time * 0.2;
+  r = pow(r, 1.0 - u_tunnel); // depth slider
+  vec2 z = vec2(r * cos(ang), r * sin(ang));
 
   /* 3. fractal iteration */
   float it = 0.0;
-  for(int i=0;i<200;i++){
-    if(i >= int(u_depth)) break;
-    z = vec2(z.x*z.x - z.y*z.y, 2.0*z.x*z.y) + vec2(u_const - 2.0, 0.0);
-    if(dot(z,z) > 4.0) break;
+  for (int i = 0; i < 200; i++) {
+    if (float(i) >= u_depth) break;
+    z = vec2(z.x * z.x - z.y * z.y, 2.0 * z.x * z.y) + vec2(u_const - 2.0, 0.0);
+    if (dot(z, z) > 4.0) break;
     it += 1.0;
   }
 
   /* 4. color */
   float t = it / u_depth;
-  vec3 col= hsl2rgb(mod(t+u_time*0.05,1.0), 0.8, 0.5);
-  col *= exp(-r*3.0);                  // fade with depth
+  vec3 col = hsl2rgb(mod(t + u_time * 0.05, 1.0), 0.8, 0.5);
+  col *= exp(-r * 3.0); // fade with depth
   gl_FragColor = vec4(col, 1.0);
 }
 </script>
@@ -82,47 +84,64 @@ void main(){
 <script>
 // ==== JS bootstrap ====
 const cvs = document.getElementById('gl');
-const gl  = cvs.getContext('webgl');
-function resize(){
-  cvs.width  = innerWidth;
-  cvs.height = innerHeight;
-  gl.viewport(0,0,cvs.width,cvs.height);
+const errorDiv = document.getElementById('error');
+const gl = cvs.getContext('webgl');
+if (!gl) {
+  errorDiv.style.display = 'block';
+  throw new Error('WebGL not supported');
 }
-resize(); addEventListener('resize', resize);
+
+function resize() {
+  cvs.width = innerWidth;
+  cvs.height = innerHeight;
+  gl.viewport(0, 0, cvs.width, cvs.height);
+}
+resize();
+addEventListener('resize', resize);
 
 // compile helpers
-function compile(src,type){
+function compile(src, type) {
   const s = gl.createShader(type);
-  gl.shaderSource(s,src);
+  gl.shaderSource(s, src);
   gl.compileShader(s);
-  if(!gl.getShaderParameter(s,gl.COMPILE_STATUS))
-    throw gl.getShaderInfoLog(s);
+  if (!gl.getShaderParameter(s, gl.COMPILE_STATUS)) {
+    console.error('Shader compilation failed:', gl.getShaderInfoLog(s));
+    throw new Error('Shader compilation failed: ' + gl.getShaderInfoLog(s));
+  }
   return s;
 }
+
 // build program
-const vs  = compile('attribute vec2 p;void main(){gl_Position=vec4(p,0,1);}',gl.VERTEX_SHADER);
-const fs  = compile(document.getElementById('frag').textContent,gl.FRAGMENT_SHADER);
-const prog= gl.createProgram();
-gl.attachShader(prog,vs); gl.attachShader(prog,fs);
+const vs = compile('attribute vec2 p; void main(){gl_Position=vec4(p,0,1);}', gl.VERTEX_SHADER);
+const fs = compile(document.getElementById('frag').textContent, gl.FRAGMENT_SHADER);
+const prog = gl.createProgram();
+gl.attachShader(prog, vs);
+gl.attachShader(prog, fs);
 gl.linkProgram(prog);
-if(!gl.getProgramParameter(prog,gl.LINK_STATUS))
-  console.error('Link error:',gl.getProgramInfoLog(prog));
+if (!gl.getProgramParameter(prog, gl.LINK_STATUS)) {
+  console.error('Program linking failed:', gl.getProgramInfoLog(prog));
+  throw new Error('Program linking failed: ' + gl.getProgramInfoLog(prog));
+}
 gl.useProgram(prog);
 
 // fullscreen triangle
 const buf = gl.createBuffer();
-gl.bindBuffer(gl.ARRAY_BUFFER,buf);
-gl.bufferData(gl.ARRAY_BUFFER,new Float32Array([-1,-1, 3,-1, -1,3]),gl.STATIC_DRAW);
-const loc = gl.getAttribLocation(prog,'p');
-gl.vertexAttribPointer(loc,2,gl.FLOAT,false,0,0);
+gl.bindBuffer(gl.ARRAY_BUFFER, buf);
+gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([-1, -1, 3, -1, -1, 3]), gl.STATIC_DRAW);
+const loc = gl.getAttribLocation(prog, 'p');
+if (loc < 0) {
+  console.error('Failed to get attribute location for p');
+  throw new Error('Failed to get attribute location for p');
+}
+gl.vertexAttribPointer(loc, 2, gl.FLOAT, false, 0, 0);
 gl.enableVertexAttribArray(loc);
 
 // uniforms
-const u_res   = gl.getUniformLocation(prog,'u_res');
-const u_time  = gl.getUniformLocation(prog,'u_time');
-const u_const = gl.getUniformLocation(prog,'u_const');
-const u_depth = gl.getUniformLocation(prog,'u_depth');
-const u_tunnel= gl.getUniformLocation(prog,'u_tunnel');
+const u_res = gl.getUniformLocation(prog, 'u_res');
+const u_time = gl.getUniformLocation(prog, 'u_time');
+const u_const = gl.getUniformLocation(prog, 'u_const');
+const u_depth = gl.getUniformLocation(prog, 'u_depth');
+const u_tunnel = gl.getUniformLocation(prog, 'u_tunnel');
 
 // UI
 const sel = document.getElementById('const');
@@ -130,33 +149,50 @@ const dep = document.getElementById('depth');
 const tun = document.getElementById('tunnel');
 
 let start = performance.now();
-function render(){
-  let t = (performance.now()-start)/1000;
-  gl.uniform2f(u_res,cvs.width,cvs.height);
-  gl.uniform1f(u_time,t);
+function render() {
+  let t = (performance.now() - start) / 1000;
+  gl.uniform2f(u_res, cvs.width, cvs.height);
+  gl.uniform1f(u_time, t);
   gl.uniform1f(u_const, parseFloat(sel.value));
   gl.uniform1f(u_depth, parseFloat(dep.value));
-  gl.uniform1f(u_tunnel,parseFloat(tun.value));
+  gl.uniform1f(u_tunnel, parseFloat(tun.value));
 
+  gl.clearColor(0.0, 0.0, 0.0, 1.0); // Explicitly set clear color to black
   gl.clear(gl.COLOR_BUFFER_BIT);
-  gl.drawArrays(gl.TRIANGLES,0,3);
+  gl.drawArrays(gl.TRIANGLES, 0, 3);
+
+  // Check for WebGL errors after draw
+  const err = gl.getError();
+  if (err !== gl.NO_ERROR) {
+    console.error('WebGL error after drawArrays:', err);
+  }
 
   requestAnimationFrame(render);
 }
 render();
 
-// ==== audio placeholder ====
+// ==== audio ====
 let ctx = null, playing = false;
 document.getElementById('toggleSound').onclick = () => {
-  if(!ctx){ ctx = new AudioContext(); }
-  if(!playing){
-    const freqs=[528,660,792];
-    freqs.forEach(f=>{
+  if (!ctx) {
+    ctx = new AudioContext();
+    if (ctx.state === 'suspended') {
+      ctx.resume().then(() => console.log('AudioContext resumed'));
+    }
+  }
+  if (!playing) {
+    const freqs = [528, 660, 792];
+    freqs.forEach(f => {
       const o = ctx.createOscillator();
-      o.type='sine'; o.frequency.value=f;
+      o.type = 'sine';
+      o.frequency.value = f;
       o.connect(ctx.destination);
-      o.start(); o.stop(ctx.currentTime+0.5);
+      o.start();
+      o.stop(ctx.currentTime + 0.5);
     });
+    document.getElementById('toggleSound').textContent = '🔊 Sound';
+  } else {
+    document.getElementById('toggleSound').textContent = '🔇 Sound';
   }
   playing = !playing;
 };
