--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <meta charset="utf-8">
 <title>Aurora Wonder Fractal</title>
 <style>
-  html, body { margin: 0; height: 100%; overflow: hidden; background: #000; color: #fff; font: 14px/1 sans-serif; }
+  html, body { margin: 0; padding: 0; width: 100%; height: 100%; overflow: hidden; background: #000; color: #fff; font: 14px/1 sans-serif; }
+  #gl { width: 100%; height: 100%; display: block; }
   #ui { position: fixed; top: 10px; left: 10px; z-index: 10; background: #0008; padding: 6px 10px; border-radius: 6px; }
   label { margin-right: 8px; white-space: nowrap; }
   select, input[type=range] { vertical-align: middle; }
@@ -40,31 +41,31 @@ precision mediump float;
 
 uniform vec2  u_res;
 uniform float u_time;
-uniform float u_const;   // morph constant (φ etc.)
-uniform float u_depth;   // iterations
-uniform float u_tunnel;  // tunnel strength
+uniform float u_const;
+uniform float u_depth;
+uniform float u_tunnel;
 
-// hue helper (HSL → RGB)
+// Hue helper (HSL → RGB)
 vec3 hsl2rgb(float h, float s, float l) {
   float a = s * min(l, 1.0 - l);
   float f = (float n) => {
     float k = mod(n + h * 6.0, 6.0);
     return l - a * max(min(min(k, 4.0 - k), 1.0), 0.0);
   };
-  return vec3(f(0.0), f(1.0 / 3.0), f(2.0 / 3.0));
+  return vec3(f(0.0), f(1.0/3.0), f(2.0/3.0));
 }
 
 void main() {
-  /* 1. normalized coords */
+  // Normalized coords
   vec2 uv = (gl_FragCoord.xy - 0.5 * u_res) / min(u_res.x, u_res.y);
 
-  /* 2. tunnel warp */
+  // Tunnel warp
   float r = length(uv);
   float ang = atan(uv.y, uv.x) + u_time * 0.2;
-  r = pow(r, 1.0 - u_tunnel); // depth slider
+  r = pow(r, 1.0 - u_tunnel);
   vec2 z = vec2(r * cos(ang), r * sin(ang));
 
-  /* 3. fractal iteration */
+  // Fractal iteration
   float it = 0.0;
   for (int i = 0; i < 200; i++) {
     if (float(i) >= u_depth) break;
@@ -73,10 +74,10 @@ void main() {
     it += 1.0;
   }
 
-  /* 4. color */
+  // Color
   float t = it / u_depth;
   vec3 col = hsl2rgb(mod(t + u_time * 0.05, 1.0), 0.8, 0.5);
-  col *= exp(-r * 3.0); // fade with depth
+  col *= exp(-r * 3.0);
   gl_FragColor = vec4(col, 1.0);
 }
 </script>
@@ -91,43 +92,60 @@ if (!gl) {
   throw new Error('WebGL not supported');
 }
 
+// Enable blending for smoother visuals
+gl.enable(gl.BLEND);
+gl.blendFunc(gl.SRC_ALPHA, gl.ONE_MINUS_SRC_ALPHA);
+
 function resize() {
-  cvs.width = innerWidth;
-  cvs.height = innerHeight;
-  gl.viewport(0, 0, cvs.width, cvs.height);
+  cvs.width = window.innerWidth;
+  cvs.height = window.innerHeight;
+  gl.viewport(0, 0, gl.drawingBufferWidth, gl.drawingBufferHeight);
 }
 resize();
-addEventListener('resize', resize);
+window.addEventListener('resize', resize);
 
-// compile helpers
+// Compile shaders
 function compile(src, type) {
   const s = gl.createShader(type);
   gl.shaderSource(s, src);
   gl.compileShader(s);
   if (!gl.getShaderParameter(s, gl.COMPILE_STATUS)) {
-    console.error('Shader compilation failed:', gl.getShaderInfoLog(s));
-    throw new Error('Shader compilation failed: ' + gl.getShaderInfoLog(s));
+    const info = gl.getShaderInfoLog(s);
+    console.error(`Shader compilation failed (${type === gl.VERTEX_SHADER ? 'vertex' : 'fragment'}):`, info);
+    throw new Error(`Shader compilation failed: ${info}`);
   }
   return s;
 }
 
-// build program
-const vs = compile('attribute vec2 p; void main(){gl_Position=vec4(p,0,1);}', gl.VERTEX_SHADER);
+// Build program
+const vsSource = `
+  attribute vec2 p;
+  void main() {
+    gl_Position = vec4(p, 0.0, 1.0);
+  }
+`;
+const vs = compile(vsSource, gl.VERTEX_SHADER);
 const fs = compile(document.getElementById('frag').textContent, gl.FRAGMENT_SHADER);
 const prog = gl.createProgram();
 gl.attachShader(prog, vs);
 gl.attachShader(prog, fs);
 gl.linkProgram(prog);
 if (!gl.getProgramParameter(prog, gl.LINK_STATUS)) {
-  console.error('Program linking failed:', gl.getProgramInfoLog(prog));
-  throw new Error('Program linking failed: ' + gl.getProgramInfoLog(prog));
+  const info = gl.getProgramInfoLog(prog);
+  console.error('Program linking failed:', info);
+  throw new Error(`Program linking failed: ${info}`);
 }
 gl.useProgram(prog);
 
-// fullscreen triangle
+// Fullscreen triangle
+const vertices = new Float32Array([
+  -1.0, -1.0,  // Bottom-left
+   3.0, -1.0,  // Bottom-right (extends beyond viewport for coverage)
+  -1.0,  3.0   // Top-left (extends beyond viewport for coverage)
+]);
 const buf = gl.createBuffer();
 gl.bindBuffer(gl.ARRAY_BUFFER, buf);
-gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([-1, -1, 3, -1, -1, 3]), gl.STATIC_DRAW);
+gl.bufferData(gl.ARRAY_BUFFER, vertices, gl.STATIC_DRAW);
 const loc = gl.getAttribLocation(prog, 'p');
 if (loc < 0) {
   console.error('Failed to get attribute location for p');
@@ -136,32 +154,40 @@ if (loc < 0) {
 gl.vertexAttribPointer(loc, 2, gl.FLOAT, false, 0, 0);
 gl.enableVertexAttribArray(loc);
 
-// uniforms
+// Uniforms
 const u_res = gl.getUniformLocation(prog, 'u_res');
 const u_time = gl.getUniformLocation(prog, 'u_time');
 const u_const = gl.getUniformLocation(prog, 'u_const');
 const u_depth = gl.getUniformLocation(prog, 'u_depth');
 const u_tunnel = gl.getUniformLocation(prog, 'u_tunnel');
 
-// UI
+// UI elements
 const sel = document.getElementById('const');
 const dep = document.getElementById('depth');
 const tun = document.getElementById('tunnel');
 
+// Rendering loop
 let start = performance.now();
 function render() {
-  let t = (performance.now() - start) / 1000;
-  gl.uniform2f(u_res, cvs.width, cvs.height);
-  gl.uniform1f(u_time, t);
-  gl.uniform1f(u_const, parseFloat(sel.value));
-  gl.uniform1f(u_depth, parseFloat(dep.value));
-  gl.uniform1f(u_tunnel, parseFloat(tun.value));
+  const t = (performance.now() - start) / 1000;
+  
+  // Log uniform values for debugging
+  const resValue = [gl.drawingBufferWidth, gl.drawingBufferHeight];
+  const constValue = parseFloat(sel.value);
+  const depthValue = parseFloat(dep.value);
+  const tunnelValue = parseFloat(tun.value);
+  console.log(`Frame: t=${t.toFixed(2)}, u_res=${resValue}, u_const=${constValue}, u_depth=${depthValue}, u_tunnel=${tunnelValue}`);
 
-  gl.clearColor(0.0, 0.0, 0.0, 1.0); // Explicitly set clear color to black
+  gl.uniform2f(u_res, resValue[0], resValue[1]);
+  gl.uniform1f(u_time, t);
+  gl.uniform1f(u_const, constValue);
+  gl.uniform1f(u_depth, depthValue);
+  gl.uniform1f(u_tunnel, tunnelValue);
+
+  gl.clearColor(0.0, 0.0, 0.0, 1.0);
   gl.clear(gl.COLOR_BUFFER_BIT);
   gl.drawArrays(gl.TRIANGLES, 0, 3);
 
-  // Check for WebGL errors after draw
   const err = gl.getError();
   if (err !== gl.NO_ERROR) {
     console.error('WebGL error after drawArrays:', err);
