--- a/index.html
+++ b/index.html
@@ -5,12 +5,47 @@
 <meta charset="utf-8">
 <title>Aurora Wonder Fractal</title>
 <style>
-  html, body { margin: 0; padding: 0; width: 100%; height: 100%; overflow: hidden; background: #000; color: #fff; font: 14px/1 sans-serif; }
-  #gl { width: 100%; height: 100%; display: block; }
-  #ui { position: fixed; top: 10px; left: 10px; z-index: 10; background: #0008; padding: 6px 10px; border-radius: 6px; }
-  label { margin-right: 8px; white-space: nowrap; }
-  select, input[type=range] { vertical-align: middle; }
-  #error { position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); color: red; font-size: 16px; text-align: center; display: none; }
+  html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background: #000;
+    color: #fff;
+    font: 14px/1 sans-serif;
+  }
+  #gl {
+    width: 100%;
+    height: 100%;
+    display: block;
+  }
+  #ui {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    z-index: 10;
+    background: #0008;
+    padding: 6px 10px;
+    border-radius: 6px;
+  }
+  label {
+    margin-right: 8px;
+    white-space: nowrap;
+  }
+  select, input[type=range] {
+    vertical-align: middle;
+  }
+  #error {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: red;
+    font-size: 16px;
+    text-align: center;
+    display: none;
+  }
 </style>
 </head>
 <body>
@@ -47,12 +82,27 @@ uniform float u_tunnel;
 
 // Hue helper (HSL → RGB)
 vec3 hsl2rgb(float h, float s, float l) {
-  float a = s * min(l, 1.0 - l);
-  float f = (float n) => {
-    float k = mod(n + h * 6.0, 6.0);
-    return l - a * max(min(min(k, 4.0 - k), 1.0), 0.0);
-  };
-  return vec3(f(0.0), f(1.0/3.0), f(2.0/3.0));
+  vec3 rgb;
+  float c = (1.0 - abs(2.0 * l - 1.0)) * s;
+  float hPrime = h * 6.0;
+  float x = c * (1.0 - abs(mod(hPrime, 2.0) - 1.0));
+  float m = l - c / 2.0;
+
+  if (hPrime < 1.0) {
+    rgb = vec3(c, x, 0.0);
+  } else if (hPrime < 2.0) {
+    rgb = vec3(x, c, 0.0);
+  } else if (hPrime < 3.0) {
+    rgb = vec3(0.0, c, x);
+  } else if (hPrime < 4.0) {
+    rgb = vec3(0.0, x, c);
+  } else if (hPrime < 5.0) {
+    rgb = vec3(x, 0.0, c);
+  } else {
+    rgb = vec3(c, 0.0, x);
+  }
+
+  return rgb + vec3(m, m, m);
 }
 
 void main() {
@@ -92,6 +142,9 @@ if (!gl) {
   throw new Error('WebGL not supported');
 }
 
+// Log canvas dimensions
+console.log(`Canvas dimensions: ${cvs.width}x${cvs.height}`);
+
 // Enable blending for smoother visuals
 gl.enable(gl.BLEND);
 gl.blendFunc(gl.SRC_ALPHA, gl.ONE_MINUS_SRC_ALPHA);
@@ -100,6 +153,7 @@ function resize() {
   cvs.width = window.innerWidth;
   cvs.height = window.innerHeight;
   gl.viewport(0, 0, gl.drawingBufferWidth, gl.drawingBufferHeight);
+  console.log(`Resized to: ${cvs.width}x${cvs.height}`);
 }
 resize();
 window.addEventListener('resize', resize);
@@ -146,6 +200,8 @@ const vertices = new Float32Array([
 const buf = gl.createBuffer();
 gl.bindBuffer(gl.ARRAY_BUFFER, buf);
 gl.bufferData(gl.ARRAY_BUFFER, vertices, gl.STATIC_DRAW);
+console.log('Vertex buffer created and bound');
+
 const loc = gl.getAttribLocation(prog, 'p');
 if (loc < 0) {
   console.error('Failed to get attribute location for p');
@@ -153,6 +209,7 @@ if (loc < 0) {
 }
 gl.vertexAttribPointer(loc, 2, gl.FLOAT, false, 0, 0);
 gl.enableVertexAttribArray(loc);
+console.log('Attribute p enabled at location:', loc);
 
 // Uniforms
 const u_res = gl.getUniformLocation(prog, 'u_res');
@@ -160,6 +217,7 @@ const u_time = gl.getUniformLocation(prog, 'u_time');
 const u_const = gl.getUniformLocation(prog, 'u_const');
 const u_depth = gl.getUniformLocation(prog, 'u_depth');
 const u_tunnel = gl.getUniformLocation(prog, 'u_tunnel');
+console.log('Uniform locations:', { u_res, u_time, u_const, u_depth, u_tunnel });
 
 // UI elements
 const sel = document.getElementById('const');
