--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@ const zoomSlider = document.getElementById('zoom');
 let zoomLevel = parseFloat(zoomSlider.value);
   zoomSlider.oninput = () => {
     zoomLevel = parseFloat(zoomSlider.value);
-    // dep.oninput = () => {};
-    // tun.oninput = () => {};
+     dep.oninput = () => {};
+     tun.oninput = () => {};
 let center = [-0.5, -0.3]; // Initial center for interesting Mandelbrot region
 
 // Zoom with mouse wheel
