--- a/index.html
+++ b/index.html
@@ -53,10 +53,21 @@ uniform float u_spin;
 
 const float BANDS = 12.0;
 
-vec3 hsl2rgb(float h,float s,float l){
-  float a=s*min(l,1.-l);
-  float f(float n){float k=mod(n+h*6.,6.);return l-a*max(min(min(k,4.-k),1.),0.);}
-  return vec3(f(0.),f(1./3.),f(2./3.));
+vec3 hsl2rgb(float h, float s, float l){
+  float c = (1.0 - abs(2.0*l - 1.0)) * s;
+  float hp = h * 6.0;
+  float x = c * (1.0 - abs(mod(hp, 2.0) - 1.0));
+  float m = l - 0.5 * c;
+  vec3 rgb;
+
+  if      (hp < 1.0) rgb = vec3(c, x, 0.0);
+  else if (hp < 2.0) rgb = vec3(x, c, 0.0);
+  else if (hp < 3.0) rgb = vec3(0.0, c, x);
+  else if (hp < 4.0) rgb = vec3(0.0, x, c);
+  else if (hp < 5.0) rgb = vec3(x, 0.0, c);
+  else               rgb = vec3(c, 0.0, x);
+
+  return rgb + vec3(m, m, m);
 }
 
 void main(){
