--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@ void main(){
 
   float jungle=fract(log(r+1.0)*3.0);        /* lush distance tint */
   vec3  col   = mix(hsl2rgb(jungle,0.7,0.4), hsl2rgb(hue,0.9,0.6), 0.6);
+
+ /* constant-powered fog & ripple right before final color fade */
+float fogStrength = u_fog * (0.5 + 0.5 * u_const);   // φ≈1.2, Aurora≈1.8, etc.
+float ripple      = 0.25 * sin(r * 8.0 * u_const);   // gentle rings
+
+ 
   col        *= exp(-r * fogStrength) + ripple;               /* adjustable fog */
   gl_FragColor=vec4(col,1.0);
 }
